event text overflow fix

--- a/src/components/ScheduleGrid/schedule.scss
+++ b/src/components/ScheduleGrid/schedule.scss
@@ -60,6 +60,7 @@ body{
     p:last-child{
         font-size: 10px;
     }
+    overflow: hidden;
     background-color: #ffa600;
     border: #df8702 4px solid;
     border-left: none;
